--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,24 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <!-- Google font -->
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700%7CVarela+Round" rel="stylesheet">
+
+	<!-- Bootstrap -->
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+	<!-- Owl Carousel -->
+	<link type="text/css" rel="stylesheet" href="assets/Template/css/owl.carousel.css" />
+	<link type="text/css" rel="stylesheet" href="assets/Template/css/owl.theme.default.css" />
+
+	<!-- Magnific Popup -->
+	<link type="text/css" rel="stylesheet" href="assets/Template/css/magnific-popup.css" />
+
+	<!-- Font Awesome Icon -->
+	<link rel="stylesheet" href="assets/Template/css/font-awesome.min.css">
+
+	<!-- Custom stlylesheet -->
+	<link type="text/css" rel="stylesheet" href="assets/Template/css/style.css" />
   <meta charset="utf-8">
   <title>LifeType</title>
   <base href="/">
@@ -10,5 +28,13 @@
 </head>
 <body>
   <app-root></app-root>
+  <script
+  src="https://code.jquery.com/jquery-3.3.1.min.js"
+  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script>
+	<script type="text/javascript" src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="assets/Template/js/owl.carousel.min.js"></script>
+	<script type="text/javascript" src="assets/Template/js/jquery.magnific-popup.js"></script>
+	<script type="text/javascript" src="assets/Template/js/main.js"></script>
 </body>
 </html>
