Changes Build site

--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
   src="https://code.jquery.com/jquery-3.3.1.min.js"
   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
   crossorigin="anonymous"></script>
-	<script type="text/javascript" src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="assets/Template/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="assets/Template/js/owl.carousel.min.js"></script>
 	<script type="text/javascript" src="assets/Template/js/jquery.magnific-popup.js"></script>
 	<script type="text/javascript" src="assets/Template/js/main.js"></script>
