--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
 	<link type="text/css" rel="stylesheet" href="assets/Template/css/style.css" />
   <meta charset="utf-8">
   <title>LifeType</title>
-  <base href="/">
+  <!-- <base href="/"> -->
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- <link rel="icon" type="image/x-icon" href="favicon.ico"> -->
